syntax = "proto3";

package kitsune.index;

import "common.proto";

// --- Start: Message definitions ---

// Request to add an account to the search index
message AddAccountIndex {
    // Unique identifier of the account (UUID)
    bytes id = 1;

    // Display name
    optional string display_name = 2;

    // Username
    string username = 3;

    // Description
    optional string description = 4;
}

// Request to add a post to the search index
message AddPostIndex {
    // Unique identifier of the post (UUID)
    bytes id = 1;

    // Subject 
    optional string subject = 2;

    // Content
    string content = 3;
}

// Request to add a new entry to the search index
message AddIndexRequest {
    // Entity that is added to the search index
    oneof index_entity {
        // Account that's being added
        AddAccountIndex account = 1;

        // Post that's being added
        AddPostIndex post = 2;
    }
}

// Response to an add request
message AddIndexResponse {}

// Request to remove an entry from the search index by its ID
message RemoveIndexRequest {
    // Index from which an entry should get removed
    kitsune.common.SearchIndex index = 1;

    // Unique identifier of the entry (UUID)
    bytes id = 2;
}

// Response to a remove request
message RemoveIndexResponse {}

// Request to completely reset a search index (aka. delete all its entries)
message ResetRequest {
    // Search index that should be reset
    kitsune.common.SearchIndex index = 1;
}

// Response to a reset request
message ResetResponse {}

// --- End: Message definitions ---

// Indexing service
service Index {
    // Add a document to the search index
    rpc Add(stream AddIndexRequest) returns (AddIndexResponse);

    // Remove a document from the search index
    rpc Remove(stream RemoveIndexRequest) returns (RemoveIndexResponse);

    // Reset the entire index
    //
    // Warning: This is a major destructive operation. It will delete all entries of the index.
    rpc Reset(ResetRequest) returns (ResetResponse);
}
